--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "start": "electron .",
     "electron": "wait-on http://localhost:5173 && electron .",
     "dev:electron": "concurrently \"pnpm dev\" \"pnpm electron\"",
-    "dist": "pnpm build && electron-builder"
+    "dist": "pnpm build && electron-builder",
+    "drizzle:generate": "drizzle-kit generate --config ./desktop/src/drizzle.config.ts",
+    "drizzle:migrate": "drizzle-kit migrate --config ./desktop/src/drizzle.config.ts"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
     "@fontsource-variable/inter": "^5.2.8",
+    "@libsql/client": "^0.17.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.17",
@@ -26,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.45.1",
     "laravel-echo": "^2.2.6",
     "lucide-react": "^0.562.0",
     "pusher-js": "^8.4.0",
@@ -49,6 +53,7 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "concurrently": "^9.2.1",
+    "drizzle-kit": "^0.31.8",
     "electron": "39.2.7",
     "electron-builder": "^26.4.0",
     "eslint": "^9.39.1",
