--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.11.0",
+    "react-to-print": "^3.2.0",
     "shadcn": "^3.6.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
