--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "electron .",
-    "electron": "wait-on http://localhost:5173 && electron .",
+    "electron": "wait-on http://localhost:5173 && electron . --no-sandbox --disable-setuid-sandbox",
     "dev:electron": "concurrently \"pnpm dev\" \"pnpm electron\"",
     "dist": "pnpm build && electron-builder",
     "drizzle:generate": "drizzle-kit generate --config ./desktop/src/drizzle.config.ts",
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@fontsource-variable/inter": "^5.2.8",
     "@libsql/client": "^0.17.0",
     "@radix-ui/react-dialog": "^1.1.15",
