mpesa && bulk uploads

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.27.1",
     "laravel-echo": "^2.2.6",
     "lucide-react": "^0.562.0",
+    "papaparse": "^5.5.3",
     "pusher-js": "^8.4.0",
     "quagga": "^0.12.1",
     "radix-ui": "^1.4.3",
