--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "electron": "wait-on http://localhost:5173 && electron . --no-sandbox --disable-setuid-sandbox",
     "dev:electron": "concurrently \"pnpm dev\" \"pnpm electron\"",
     "dist": "pnpm build && electron-builder",
+    "dist:linux": "pnpm build && electron-builder --linux",
+    "dist:win": "pnpm build && electron-builder --win",
+    "dist:mac": "pnpm build && electron-builder --mac",
     "drizzle:generate": "drizzle-kit generate --config ./desktop/src/drizzle.config.ts",
     "drizzle:migrate": "drizzle-kit migrate --config ./desktop/src/drizzle.config.ts"
   },
@@ -31,6 +34,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.12",
     "@zxing/library": "^0.21.3",
@@ -54,6 +58,7 @@
     "react-to-print": "^3.2.0",
     "recharts": "^3.6.0",
     "shadcn": "^3.6.2",
+    "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
@@ -93,7 +98,7 @@
       "dist/**/*",
       "desktop/**/*",
       "package.json",
-      "!node_modules"
+      "node_modules/**/*"
     ],
     "asarUnpack": [
       "node_modules/@libsql/*/bindings/**/*"
