--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "dist:linux": "pnpm build && electron-builder --linux",
     "dist:win": "pnpm build && electron-builder --win",
     "dist:mac": "pnpm build && electron-builder --mac",
+    "build:web": "vite build",
+    "build:electron": "pnpm build:web && electron-builder",
+    "build:linux": "pnpm build:web && electron-builder --linux",
+    "build:win": "pnpm build:web && electron-builder --win",
+    "build:mac": "pnpm build:web && electron-builder --mac",
     "drizzle:generate": "drizzle-kit generate --config ./desktop/src/drizzle.config.ts",
     "drizzle:migrate": "drizzle-kit migrate --config ./desktop/src/drizzle.config.ts"
   },
@@ -57,6 +62,7 @@
     "react-router-dom": "^7.11.0",
     "react-to-print": "^3.2.0",
     "recharts": "^3.6.0",
+    "rollup-plugin-visualizer": "^6.0.5",
     "shadcn": "^3.6.2",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
